--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src="./js/p5.min.js"></script>
-    <script src="./sketch.js"></script>
+    <script src="./js/sketch.js"></script>
   </head>
   <body>
   </body>
