--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <script src="./js/p5.min.js"></script>
     <script src="./js/sketch.js"></script>
   </head>
-  <body>
+  <body style="margin:0;padding:0">
   </body>
 </html>
