--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script src="./js/p5.min.js"></script>
+    <script src="./js/bulbs.js"></script>
     <script src="./js/sketch.js"></script>
   </head>
   <body style="margin:0;padding:0">
